[package]
name = "cbl-lumberjack"
description = "CBL log parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lumberjack_parse.workspace = true
thiserror.workspace = true
clap.workspace = true
clap_derive.workspace = true
grep.workspace = true
chrono.workspace = true
regex.workspace = true
iced.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
rfd.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
enum-iterator.workspace = true

[workspace]
members = [
    "parse",
]

[workspace.package]
version = "0.1.0"
authors = ["Callum Birks <callumbirks@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/couchbaselabs/cbl-lumberjack"

[workspace.dependencies]
lumberjack = { version = "0.1.0", path = "." }
lumberjack_parse = { version = "0.1.0", path = "parse" }

thiserror = "1.0"
clap = "4.5.4"
clap_derive = "4.5.4"
grep = "0.3"
chrono = "0.4"
regex = "1.10"
iced = { version = "0.12.1", features = ["highlighter", "tokio", "debug", "advanced"] }
tokio = { version = "1", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = "0.7.11"
rfd = "0.14"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
enum-iterator = "2.1"
futures = "0.3"
diesel = "2.1"
diesel_migrations = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rangemap = "1.5"
semver = "1.0"

[workspace.lints.clippy]
pedantic = "warn"
