[package]
name = "cbl-lumberjack"
description = "CBL log parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["xlsx"]
xlsx = ["dep:rust_xlsxwriter"]

[dependencies]
lumberjack_parse = { workspace = true }

clap = { workspace = true, features = ["derive"] }
diesel = { workspace = true }
env_logger = { workspace = true }
libsqlite3-sys = { workspace = true }
log = { workspace = true }
rust_xlsxwriter = { workspace = true, optional = true, features = [
    "chrono",
    "serde",
] }
serde = { workspace = true }
thiserror = { workspace = true }

[workspace]
members = ["parse"]

[workspace.package]
version = "0.1.0"
authors = ["Callum Birks <callumbirks@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/couchbaselabs/cbl-lumberjack"

[workspace.dependencies]
lumberjack_cli = { version = "0.1.0", path = "." }
lumberjack_parse = { version = "0.1.0", path = "parse" }

chrono = "0.4"
clap = "4.5.4"
diesel = "^2.2"
diesel_migrations = "^2.2"
env_logger = "0.11"
enum-iterator = "2.1"
futures = "0.3"
grep = "0.3"
lazy_static = "1.4"
libsqlite3-sys = { version = "^0.28.0", features = ["bundled"] }
log = "0.4"
rangemap = "1.5"
rayon = "1.10.0"
regex = "1.10"
rust_xlsxwriter = "0.69.0"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"

[workspace.lints.clippy]
pedantic = "warn"
