[package]
name = "lumberjack_parse"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
enum-iterator.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
rangemap.workspace = true
rayon.workspace = true
regex.workspace = true
rusqlite.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
semver.workspace = true
regex.workspace = true

[dev-dependencies]
env_logger.workspace = true
rusqlite = { workspace = true, features = ["bundled", "array", "chrono"] }
